[package]
name = "orcid"
version = "0.1.4"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2018"
description="A wrapper around the ORCID API"
repository="https://github.com/magnusmanske/orcid"
keywords=["orcid","api","publications","papers","science"]
categories=["api-bindings","science"]
license="MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
serde_json = "1"
reqwest = { version = "*", features = ["blocking", "json"] }
